argus-insight-thirdparties/gitlab-service/kubernetes/gitlab-runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-runner
  namespace: argus-insight
  labels:
    app.kubernetes.io/name: gitlab-runner
    app.kubernetes.io/part-of: argus-insight
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gitlab-runner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gitlab-runner
        app.kubernetes.io/part-of: argus-insight
    spec:
      containers:
        - name: gitlab-runner
          image: gitlab/gitlab-runner:latest
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: runner-config
              mountPath: /etc/gitlab-runner
      volumes:
        - name: runner-config
          emptyDir: {}
